2018-10-28 v0.9.3 Now GceZones and GCeRegions work nearly perfectly.
2018-10-28 v0.9.1 Added docker containers (Actually two recipes from two sites, since my localhost doesnt have docker - so i wait to try another one :)
2018-10-28 v0.9 Created app